usecases/models/gemma2-9b-fp8/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gemma2-9b-fp8
  labels:
    kubernetes.io/metadata.name: gemma2-9b-fp8
    opendatahub.io/dashboard: "true"
    app.kubernetes.io/name: gemma2-9b-fp8
    app.kubernetes.io/part-of: gemma2-9b-fp8
