usecases/models/gemma2-9b-fp8/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gemma2-9b-fp8-route-svc
  labels:
    app.kubernetes.io/name: gemma2-9b-fp8
    app.kubernetes.io/component: route-service
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  selector:
    app: isvc.gemma2-9b-fp8-predictor
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
