usecases/models/gemma2-9b-fp8/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gemma2-9b-fp8
  labels:
    app.kubernetes.io/name: gemma2-9b-fp8
    app.kubernetes.io/component: route
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  to:
    kind: Service
    name: gemma2-9b-fp8-route-svc
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
